src/main/java/com/example/baemin/global/error/exception/BusinessException.java
package com.example.baemin.global.error.exception;

import com.example.baemin.global.error.ErrorCode;
import lombok.Getter;

@Getter
public class BusinessException extends RuntimeException {

    private final ErrorCode errorCode;

    public BusinessException(ErrorCode errorCode) {
        super(errorCode.getMessage());
        this.errorCode = errorCode;
    }

}
